--- a/Bootstrap4/conFusion/contactus.html
+++ b/Bootstrap4/conFusion/contactus.html
@@ -33,7 +33,9 @@
               <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+              <a class="nav-link" href="./contactus.html"
+                ><span class="fa fa-address-card fa-lg"></span> Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -86,7 +88,17 @@
         <div class="col-12 col-sm-6 offset-sm-1">
           <h5>Map of our Location</h5>
         </div>
-        <div class="col-12 col-sm-11 offset-sm-1">Button group goes here</div>
+        <div class="col-12 col-sm-11 offset-sm-1">
+          <div class="btn-group" role="group">
+            <a role="button" class="btn btn-primary" href="tel:+85212345678"
+              ><i class="fa fa-phone"></i> Call</a
+            >
+            <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
+            <a role="button" class="btn btn-success" href="mailto:confusion@food.net"
+              ><i class="fa fa-envelope-o"></i> Email</a
+            >
+          </div>
+        </div>
       </div>
 
       <div class="row row-content">
