--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -47,13 +47,17 @@
         <div class="row row-header">
           <div class="col-12 col-sm-6">
             <h1>Ristorante con Fusion</h1>
-            <p class="d-none d-sm-block">
+            <!-- <p class="d-none d-sm-block"> THIS IS TEMPORARY DISABLED -->
+            <p>
               We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
               lipsmacking creations will tickle your culinary senses!
             </p>
           </div>
           <div class="col-12 col-sm align-self-center">
             <img src="img/logo.png" class="img-fluid" />
+          </div>
+          <div class="col-12 col-sm align-self-center">
+            <a href="#reservationForm" class="btn btn-warning btn-sm btn-block">Reserve Table</a>
           </div>
         </div>
       </div>
@@ -90,12 +94,17 @@
           <h3>This Month's Promotions</h3>
         </div>
         <div class="col col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
-          <p class="d-none d-sm-block">
-            Featuring mouthwatering combinations with a choice of five different salads, six enticing
-            appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All
-            for just $19.99 per person
-          </p>
+          <div class="media">
+            <div class="media-body">
+              <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+              <p class="d-none d-sm-block">
+                Featuring mouthwatering combinations with a choice of five different salads, six enticing
+                appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.
+                All for just $19.99 per person
+              </p>
+            </div>
+            <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Uthappizza" />
+          </div>
         </div>
       </div>
 
@@ -118,6 +127,93 @@
                 closely with whos-who in the culinary world, he specializes in creating mouthwatering
                 Indo-Italian fusion experiences.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row row-content justify-content-sm-center">
+        <div class="col-12 col-sm-8">
+          <div class="card">
+            <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+            <div class="card-body">
+              <form id="reservationForm">
+                <dl class="row">
+                  <dd class="col-2">Number of Guests</dd>
+                  <dd class="col-10">
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio1"
+                        value="option1"
+                      />
+                      <label class="form-check-label" for="inlineRadio1">1</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio2"
+                        value="option2"
+                      />
+                      <label class="form-check-label" for="inlineRadio2">2</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio3"
+                        value="option3"
+                      />
+                      <label class="form-check-label" for="inlineRadio3">3</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio4"
+                        value="option4"
+                      />
+                      <label class="form-check-label" for="inlineRadio4">4</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio5"
+                        value="option5"
+                      />
+                      <label class="form-check-label" for="inlineRadio5">5</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio6"
+                        value="option6"
+                      />
+                      <label class="form-check-label" for="inlineRadio6">6</label>
+                    </div>
+                  </dd>
+                  <dd class="col-2">Date and Time</dd>
+                  <dd class="col-10 form-inline">
+                    <label class="sr-only" for="date">Date</label>
+                    <input type="text" class="form-control col-5" id="date" placeholder="Date" />
+                    <label class="sr-only" for="time">Time</label>
+                    <input type="text" class="form-control col-5" id="time" placeholder="Time" />
+                  </dd>
+                  <dt class="col-2"></dt>
+                  <dd class="col-10">
+                    <button type="reserve" class="btn btn-primary">Reserve</button>
+                  </dd>
+                </dl>
+              </form>
             </div>
           </div>
         </div>
