--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -321,10 +321,10 @@
                   alt="Uthappizza"
                 />
                 <div class="carousel-caption d-none d-md-block">
-                  <h2>
+                  <h1>
                     Uthappizza <span class="badge badge-danger">HOT</span
                     ><span class="badge badge-pill badge-secondary">$4.99</span>
-                  </h2>
+                  </h1>
                   <p class="d-none d-sm-block">
                     A unique combination of Indian Uthappam (pancake) and
                     Italian pizza, topped with Cerignola olives, ripe vine
@@ -392,6 +392,14 @@
           >
             <span class="carousel-control-next-icon"></span>
           </a>
+          <div class="btn-group" id="carouselButton">
+            <button class="btn btn-danger btn-sm" id="carousel-pause">
+              <span class="fa fa-pause"></span>
+            </button>
+            <button class="btn btn-danger btn-sm" id="carousel-play">
+              <span class="fa fa-play"></span>
+            </button>
+          </div>
         </div>
       </div>
 
@@ -540,5 +548,16 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $('#mycarousel').carousel({ interval: 2000});
+        $('#carousel-pause').click(function() {
+          $('#mycarousel').carousel('pause');
+        });
+        $('#carousel-play').click(function() {
+          $('#mycarousel').carousel('cycle');
+        });
+      });
+    </script>
   </body>
 </html>
