--- a/Bootstrap4/conFusion/aboutus.html
+++ b/Bootstrap4/conFusion/aboutus.html
@@ -4,33 +4,58 @@
     <title>Ristorante Con Fusion: About Us</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
       <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#Navbar"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" width="41" /></a>
+        <a class="navbar-brand" href="./index.html"
+          ><img src="img/logo.png" height="30" width="41"
+        /></a>
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a>
+              <a class="nav-link" href="./index.html"
+                ><span class="fa fa-home fa-lg"></span> Home</a
+              >
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
+              <a class="nav-link" href="./aboutus.html"
+                ><span class="fa fa-info fa-lg"></span> About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+              <a class="nav-link" href="#"
+                ><span class="fa fa-list fa-lg"></span> Menu</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./contactus.html"
@@ -47,8 +72,9 @@
           <div class="col-12 col-sm-6">
             <h1>Ristorante con Fusion</h1>
             <p>
-              We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
-              lipsmacking creations will tickle your culinary senses!
+              We take inspiration from the World's best cuisines, and create a
+              unique fusion experience. Our lipsmacking creations will tickle
+              your culinary senses!
             </p>
           </div>
           <div class="col-12 col-sm align-self-center">
@@ -74,16 +100,18 @@
         <div class="col-12 col-sm-6">
           <h2>Our History</h2>
           <p>
-            Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par
-            excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere
-            else, it enjoys patronage from the A-list clientele in Hong Kong. Featuring four of the best
-            three-star Michelin chefs in the world, you never know what will arrive on your plate the next
-            time you visit us.
+            Started in 2010, Ristorante con Fusion quickly established itself as
+            a culinary icon par excellence in Hong Kong. With its unique brand
+            of world fusion cuisine that can be found nowhere else, it enjoys
+            patronage from the A-list clientele in Hong Kong. Featuring four of
+            the best three-star Michelin chefs in the world, you never know what
+            will arrive on your plate the next time you visit us.
           </p>
           <p>
             The restaurant traces its humble beginnings to
-            <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for
-            the first time the world's best cuisines in a pan.
+            <em>The Frying Pan</em>, a successful chain started by our CEO, Mr.
+            Peter Pan, that featured for the first time the world's best
+            cuisines in a pan.
           </p>
         </div>
         <div class="col-12 col-sm-6">
@@ -107,12 +135,14 @@
           <div class="card card-body bg-light">
             <blockquote class="blockquote">
               <p class="mb-0">
-                You better cut the pizza in four pieces because I'm not hungry enough to eat six.
+                You better cut the pizza in four pieces because I'm not hungry
+                enough to eat six.
               </p>
               <footer class="blockquote-footer">
                 Yogi Berra,
                 <cite title="Source Title"
-                  >The Wit and Wisdom of Yogi Berra, P. Pepe, Diversion Books, 2014</cite
+                  >The Wit and Wisdom of Yogi Berra, P. Pepe, Diversion Books,
+                  2014</cite
                 >
               </footer>
             </blockquote>
@@ -135,54 +165,86 @@
                 </h3>
               </div>
             </div>
-            <div role="tabpanel" class="collapse show" id="peter" data-parent="#accordion">
+            <div
+              role="tabpanel"
+              class="collapse show"
+              id="peter"
+              data-parent="#accordion"
+            >
               <div class="card-body">
                 <p class="d-none d-sm-block">
-                  Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the
-                  arduous journey to the shores of America with the intention of giving their children the
-                  best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with
-                  whatever is available inexpensively at the supermarket, was his first inspiration to create
-                  the fusion cuisines for which
-                  <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this
-                  restaurant, pioneering cross-cultural culinary connections.
+                  Our CEO, Peter, credits his hardworking East Asian immigrant
+                  parents who undertook the arduous journey to the shores of
+                  America with the intention of giving their children the best
+                  future. His mother's wizardy in the kitchen whipping up the
+                  tastiest dishes with whatever is available inexpensively at
+                  the supermarket, was his first inspiration to create the
+                  fusion cuisines for which
+                  <em>The Frying Pan</em> became well known. He brings his zeal
+                  for fusion cuisines to this restaurant, pioneering
+                  cross-cultural culinary connections.
                 </p>
               </div>
             </div>
             <div class="card">
               <div class="card-header" role="tab" id="dannyhead">
                 <h3 class="mb-0">
-                  <a class="collapsed" data-toggle="collapsed" data-target="#danny">
+                  <a
+                    class="collapsed"
+                    data-toggle="collapsed"
+                    data-target="#danny"
+                  >
                     Dhanasekaran Witherspoon <small>Chief Food Officer</small>
                   </a>
                 </h3>
               </div>
             </div>
-            <div role="tabpanel" class="collapse" id="danny" data-parent="#accordion">
+            <div
+              role="tabpanel"
+              class="collapse"
+              id="danny"
+              data-parent="#accordion"
+            >
               <div class="card-body">
                 <p class="d-none d-sm-block">
-                  Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long
-                  established family tradition in farming and produce. His experiences growing up on a farm in
-                  the Australian outback gave him great appreciation for varieties of food sources. As he puts
-                  it in his own words,
-                  <em>Everything that runs, wins, and everything that stays, pays!</em>
+                  Our CFO, Danny, as he is affectionately referred to by his
+                  colleagues, comes from a long established family tradition in
+                  farming and produce. His experiences growing up on a farm in
+                  the Australian outback gave him great appreciation for
+                  varieties of food sources. As he puts it in his own words,
+                  <em
+                    >Everything that runs, wins, and everything that stays,
+                    pays!</em
+                  >
                 </p>
               </div>
             </div>
             <div class="card">
               <div class="card-header" role="tab" id="agumbehead">
                 <h3 class="mb-0">
-                  <a class="collapsed" data-toggle="collapsed" data-target="#agumbe">
+                  <a
+                    class="collapsed"
+                    data-toggle="collapsed"
+                    data-target="#agumbe"
+                  >
                     Agumbe Tang <small>Chief Taste Officer</small>
                   </a>
                 </h3>
               </div>
             </div>
-            <div role="tabpanel" class="collapse" id="agumbe" data-parent="#accordion">
+            <div
+              role="tabpanel"
+              class="collapse"
+              id="agumbe"
+              data-parent="#accordion"
+            >
               <div class="card-body">
                 <p class="d-none d-sm-block">
-                  Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that
-                  every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that
-                  ensues if their dish does not meet his exacting standards. He lives by his motto,
+                  Blessed with the most discerning gustatory sense, Agumbe, our
+                  CTO, personally ensures that every dish that we serve meets
+                  his exacting tastes. Our chefs dread the tongue lashing that
+                  ensues if their dish does not meet his exacting standards. He
+                  lives by his motto,
                   <em>You click only if you survive my lick.</em>
                 </p>
               </div>
@@ -190,22 +252,32 @@
             <div class="card">
               <div class="card-header" role="tab" id="albertohead">
                 <h3 class="mb-0">
-                  <a class="collapsed" data-toggle="collapse" data-target="#alberto">
+                  <a
+                    class="collapsed"
+                    data-toggle="collapse"
+                    data-target="#alberto"
+                  >
                     Alberto Somayya <small>Executive Chef</small>
                   </a>
                 </h3>
               </div>
             </div>
 
-            <div role="tabpanel" class="collapse" id="alberto" data-parent="#accordion">
+            <div
+              role="tabpanel"
+              class="collapse"
+              id="alberto"
+              data-parent="#accordion"
+            >
               <div class="card-body">
                 <p class="d-none d-sm-block">
-                  Award winning three-star Michelin chef with wide International experience having worked
-                  closely with whos-who in the culinary world, he specializes in creating mouthwatering
-                  Indo-Italian fusion experiences. He says,
+                  Award winning three-star Michelin chef with wide International
+                  experience having worked closely with whos-who in the culinary
+                  world, he specializes in creating mouthwatering Indo-Italian
+                  fusion experiences. He says,
                   <em
-                    >Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma
-                    Mia!</em
+                    >Put together the cuisines from the two craziest cultures,
+                    and you get a winning hit! Amma Mia!</em
                   >
                 </p>
               </div>
@@ -285,22 +357,34 @@
           </div>
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
-              <a class="btn btn-social-icon btn-google" href="http://google.com/+"
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://google.com/+"
                 ><i class="fa fa-google-plus fa-lg"></i
               ></a>
-              <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="
+              <a
+                class="btn btn-social-icon btn-facebook"
+                href="http://www.facebook.com/profile.php?id="
                 ><i class="fa fa-facebook fa-lg"></i
               ></a>
-              <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"
+              <a
+                class="btn btn-social-icon btn-linkedin"
+                href="http://www.linkedin.com/in/"
                 ><i class="fa fa-linkedin fa-lg"></i
               ></a>
-              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"
+              <a
+                class="btn btn-social-icon btn-twitter"
+                href="http://twitter.com/"
                 ><i class="fa fa-twitter fa-lg"></i
               ></a>
-              <a class="btn btn-social-icon btn-google" href="http://youtube.com/"
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://youtube.com/"
                 ><i class="fa fa-youtube fa-lg"></i
               ></a>
-              <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
+              <a class="btn btn-social-icon" href="mailto:"
+                ><i class="fa fa-envelope-o fa-lg"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -315,5 +399,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
