--- a/Bootstrap4/conFusion/contactus.html
+++ b/Bootstrap4/conFusion/contactus.html
@@ -4,33 +4,58 @@
     <title>Ristorante Con Fusion: About Us</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
       <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#Navbar"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41" /></a>
+        <a class="navbar-brand" href="#"
+          ><img src="img/logo.png" height="30" width="41"
+        /></a>
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a>
+              <a class="nav-link" href="./index.html"
+                ><span class="fa fa-home fa-lg"></span> Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
+              <a class="nav-link" href="./aboutus.html"
+                ><span class="fa fa-info fa-lg"></span> About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+              <a class="nav-link" href="#"
+                ><span class="fa fa-list fa-lg"></span> Menu</a
+              >
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="./contactus.html"
@@ -48,8 +73,9 @@
           <div class="col-12 col-sm-6">
             <h1>Ristorante con Fusion</h1>
             <p>
-              We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
-              lipsmacking creations will tickle your culinary senses!
+              We take inspiration from the World's best cuisines, and create a
+              unique fusion experience. Our lipsmacking creations will tickle
+              your culinary senses!
             </p>
           </div>
           <div class="col-12 col-sm align-self-center">
@@ -95,8 +121,13 @@
             <a role="button" class="btn btn-primary" href="tel:+85212345678"
               ><i class="fa fa-phone"></i> Call</a
             >
-            <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
-            <a role="button" class="btn btn-success" href="mailto:confusion@food.net"
+            <a role="button" class="btn btn-info"
+              ><i class="fa fa-skype"></i> Skype</a
+            >
+            <a
+              role="button"
+              class="btn btn-success"
+              href="mailto:confusion@food.net"
               ><i class="fa fa-envelope-o"></i> Email</a
             >
           </div>
@@ -110,7 +141,9 @@
         <div class="col-12 col-md-9">
           <form>
             <div class="form-group row">
-              <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+              <label for="firstname" class="col-md-2 col-form-label"
+                >First Name</label
+              >
               <div class="col-md-10">
                 <input
                   type="text"
@@ -122,7 +155,9 @@
               </div>
             </div>
             <div class="form-group row">
-              <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+              <label for="lastname" class="col-md-2 col-form-label"
+                >Last Name</label
+              >
               <div class="col-md-10">
                 <input
                   type="text"
@@ -134,7 +169,9 @@
               </div>
             </div>
             <div class="form-group row">
-              <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
+              <label for="telnum" class="col-12 col-md-2 col-form-label"
+                >Contact Tel.</label
+              >
               <div class="col-5 col-md-3">
                 <input
                   type="tel"
@@ -145,19 +182,37 @@
                 />
               </div>
               <div class="col-7 col-md-7">
-                <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number" />
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="telnum"
+                  name="telnum"
+                  placeholder="Tel. number"
+                />
               </div>
             </div>
             <div class="form-group row">
               <label for="emailid" class="col-md-2 col-form-label">Email</label>
               <div class="col-md-10">
-                <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email" />
+                <input
+                  type="email"
+                  class="form-control"
+                  id="emailid"
+                  name="emailid"
+                  placeholder="Email"
+                />
               </div>
             </div>
             <div class="form-group row">
               <div class="col-md-6 offset-md-2">
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" name="approve" id="approve" value="" />
+                  <input
+                    type="checkbox"
+                    class="form-check-input"
+                    name="approve"
+                    id="approve"
+                    value=""
+                  />
                   <label class="form-check-label" for="approve">
                     <strong>May we contact you?</strong>
                   </label>
@@ -171,14 +226,23 @@
               </div>
             </div>
             <div class="form-group row">
-              <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+              <label for="feedback" class="col-md-2 col-form-label"
+                >Your Feedback</label
+              >
               <div class="col-md-10">
-                <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                <textarea
+                  class="form-control"
+                  id="feedback"
+                  name="feedback"
+                  rows="12"
+                ></textarea>
               </div>
             </div>
             <div class="form-group row">
               <div class="offset-md-2 col-md-10">
-                <button type="submit" class="btn btn-primary">Send Feedback</button>
+                <button type="submit" class="btn btn-primary">
+                  Send Feedback
+                </button>
               </div>
             </div>
           </form>
@@ -213,22 +277,34 @@
           </div>
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
-              <a class="btn btn-social-icon btn-google" href="http://google.com/+"
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://google.com/+"
                 ><i class="fa fa-google-plus"></i
               ></a>
-              <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="
+              <a
+                class="btn btn-social-icon btn-facebook"
+                href="http://www.facebook.com/profile.php?id="
                 ><i class="fa fa-facebook"></i
               ></a>
-              <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"
+              <a
+                class="btn btn-social-icon btn-linkedin"
+                href="http://www.linkedin.com/in/"
                 ><i class="fa fa-linkedin"></i
               ></a>
-              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"
+              <a
+                class="btn btn-social-icon btn-twitter"
+                href="http://twitter.com/"
                 ><i class="fa fa-twitter"></i
               ></a>
-              <a class="btn btn-social-icon btn-google" href="http://youtube.com/"
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://youtube.com/"
                 ><i class="fa fa-youtube"></i
               ></a>
-              <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+              <a class="btn btn-social-icon" href="mailto:"
+                ><i class="fa fa-envelope-o"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -243,5 +319,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
