--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -64,7 +64,7 @@
             </li>
           </ul>
           <span class="navbar-text">
-            <a data-toggle="modal" data-target="#loginModal">
+            <a id="btnShowModal">
               <span class="fa fa-sign-in"></span> Login</a
             >
           </span>
@@ -151,8 +151,7 @@
             <a
               role="button"
               class="btn btn-block nav-link btn-warning"
-              data-toggle="modal"
-              data-target="#reservationModal"
+              id="btnReservationModal"
               >Reserve Table</a
             >
           </div>
@@ -546,24 +545,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $('#mycarousel').carousel({ interval: 2000});
-        $('#carouselButton').click(function() {
-          if ($('#carouselButton').children('span').hasClass('fa-pause'))
-          {
-              $('#mycarousel').carousel('pause');
-              $('#carouselButton').children('span').removeClass('fa-pause');
-              $('#carouselButton').children('span').addClass('fa-play');
-          }
-          else if ($('#carouselButton').children('span').hasClass('fa-play'))
-          {
-              $('#mycarousel').carousel('cycle');
-              $('#carouselButton').children('span').removeClass('fa-play');
-              $('#carouselButton').children('span').addClass('fa-pause');
-          }
-        });
-      });
-    </script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
